tests/snapshots/rust-nightly/acceptance__features_produce_human_readable_errors.snap
---
source: tests/acceptance_tests.rs
assertion_line: 143
expression: output
---
  |
  |                     ^^^^^^^^^^^^^^
 --> src/lib.rs:5:21
5 | #[test_case(2 => is matching_regex "abc")]
error: could not compile `features_produce_human_readable_errors` due to previous error
error: unexpected token
